<resources>
    <string name="app_name">Puestos</string>
    <string name="app_title">Administrador de Puestos</string>
    <string name="cargando_imagen">La imagen aun se está cargando…</string>
    <string name="sesion_cerrada">Inicia tu sesión</string>
    <string name="email">Email</string>
    <string name="clave">Clave</string>
    <string name="login">Entrar</string>
    <string name="logout">Cerrar sesión</string>
    <string name="cargando">Cargando…</string>
    <string name="error_login">Las credenciales son incorrectas</string>
    <string name="campo_obligatorio">Campo obligatorio</string>
    <string name="ok_login">Usuario: %1$s (verificado: %2$b)</string>
    <string name="seguro_logout">¿Seguro que desea cerrar sesión?</string>
    <string name="desde_aqui">Desde aquí…</string>
    <string name="hasta_aqui">Hasta aquí…</string>
    <string name="acciones">Acciones:</string>
    <string name="error_camino">No se puede calcular el camino</string>
    <string name="error_outside_bounds">El punto elegido está fuera del plano</string>
    <string name="ruta">Calcular ruta</string>
    <string name="info">Info de puestos</string>
    <string name="puestos">Lista de puestos</string>
    <string name="puesto_new">Nuevo puesto</string>
    <string name="puesto_del">Borrar puesto</string>
    <string name="ruta_msg">Seleccione comienzo y fin de ruta</string>
    <string name="info_msg">Seleccione el puesto</string>
    <string name="puestos_msg">Lista de puestos</string>
    <string name="puestos_get_error">Error al obtener los puestos</string>
    <string name="puestos_get_none">No se encontraron puestos</string>

    <!-- DLG PUESTO -->
    <string name="ocupar">Ocupar</string>
    <string name="liberar">Liberar</string>
    <string name="cerrar">Cerrar</string>
    <string name="guardar">Guardar</string>

    <string name="datos_del_puestos">Datos del Puestos</string>
    <string name="id">ID:</string>
    <string name="codigo">Código:</string>
    <string name="propietario">Propietario:</string>
    <string name="ocupante">Ocupante:</string>
    <string name="estado">Estado:</string>

    <!-- ENUM: WORSTATION STATUS -->
    <string name="occupied">Ocupado</string>
    <string name="free">Libre</string>
    <string name="unavailable">No disponible</string>
    <!-- ENUM: USER TYPE -->
    <string name="admin">Administrador</string>
    <string name="fixed">Trabajador fijo</string>
    <string name="interim">Trabajador temporal</string>
    <string name="manage_own_workstation">Gestionar puesto propio</string>

    <!--WORKSTATIONS ACTIVITY -->
    <string name="workstations_list">Lista de puestos disponibles</string>
    <string name="workstations_map">Mapa de puestos</string>
    <string name="fill_workstation">¿Desea ocupar el puesto?</string>
    <string name="status">Estado</string>
    <string name="owner">Propietario</string>
    <string name="position">Posición</string>
    <string name="filled_workstation">Has ocupado el puesto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_tiene_puesto_ocupado">No tienes un puesto ocupado</string>
    <string name="login_title">Puestos Share</string>
    <string name="login_subtitle">Bienvenido a Puestos Share. La plataforma de\n gestión de puestos de Santander Tecnología</string>
    <string name="access">Acceder</string>
    <string name="user">Usuario</string>
    <string name="password">Password</string>
    <string name="disconnect">Desconectar</string>
    <string name="available_list">Lista disponibles</string>
    <string name="workstation_manage">Gestión de puesto</string>
    <string name="configuration">Configuración</string>
    <string name="cambiar_password">Cambiar Password</string>
    <string name="change_pass_first_time">Por su seguridad, cambie la contraseña por defecto</string>
    <string name="liberar_puesto">Debes liberar el puesto antes de ocupar otro</string>
    <string name="ir_desde_entrada">Ir desde entrada</string>
    <string name="mostrar_tutorial">Ver tutorial</string>
    <string name="multiple_free">Liberar varios dias</string>
    <string name="select_day">Seleccionar día</string>
    <string name="aceptar">aceptar</string>
    <string name="ver_mapa">Ver en el mapa</string>
    <string name="name">Nombre</string>
    <string name="go_to_workstationList">Ir a lista disponibles</string>
    <string name="search_user">Busqueda de usuario</string>
    <string name="user_name">Nombre de usuario . . .</string>
    <string name="lugares_interes">Lugares de interes</string>
    <string name="map_position">Ver en mapa</string>
    <string name="mi_puesto">Mi puesto</string>


</resources>
