<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom">
        <ImageView
            android:id="@+id/icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/silla"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_subtitle"
            />

        <TextView
        android:id="@+id/txtLoginStatus"
        style="@style/ThemeOverlay.MyTextDetail"
        android:text="@string/sesion_cerrada" />

        <LinearLayout
            android:id="@+id/layLoginFields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <EditText
            android:id="@+id/etLoginEmail"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:background="@color/very_light_grey"
            android:layout_marginTop="40dp"
            android:hint="@string/user"/>

        <EditText
            android:id="@+id/etLoginClave"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:background="@color/very_light_grey"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/password" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/layLoginBotones"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:text="@string/access"
                android:background="@drawable/login_button_style"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </LinearLayout>


    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="3"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:orientation="vertical">-->

        <!--<ImageView-->
            <!--android:id="@+id/icon"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="50dp"-->
            <!--android:src="@mipmap/ic_launcher"/>-->

        <!--<TextView-->
            <!--android:id="@+id/txtTitle"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="50dp"-->
            <!--android:layout_marginBottom="16dp"-->
            <!--android:text="@string/app_title"-->
            <!--android:theme="@style/ThemeOverlay.MyTitleText"-->
            <!--/>-->

        <!--<TextView-->
            <!--android:id="@+id/txtLoginStatus"-->
            <!--style="@style/ThemeOverlay.MyTextDetail"-->
            <!--android:text="@string/sesion_cerrada" />-->

    <!--</LinearLayout>-->


    <!--<RelativeLayout-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1"-->
        <!--android:background="@android:color/darker_gray"-->
        <!--android:gravity="center_vertical">-->

        <!--<LinearLayout-->
            <!--android:id="@+id/layLoginFields"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal"-->
            <!--android:paddingLeft="16dp"-->
            <!--android:paddingRight="16dp">-->

            <!--<EditText-->
                <!--android:id="@+id/txtLoginEmail"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:hint="@string/email"-->
                <!--android:inputType="textEmailAddress" />-->

            <!--<EditText-->
                <!--android:id="@+id/txtLoginClave"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:hint="@string/clave"-->
                <!--android:inputType="textPassword" />-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:id="@+id/layLoginBotones"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/layLoginFields"-->
            <!--android:orientation="horizontal"-->
            <!--android:paddingLeft="16dp"-->
            <!--android:paddingRight="16dp">-->

            <!--<Button-->
                <!--android:id="@+id/btnLogin"-->
                <!--style="@style/Widget.AppCompat.Button.Colored"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/login"-->
                <!--android:theme="@style/ThemeOverlay.MyDarkButton"/>-->

        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:id="@+id/layLogoutBotones"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:orientation="horizontal"-->
            <!--android:paddingLeft="16dp"-->
            <!--android:paddingRight="16dp"-->
            <!--android:visibility="gone"-->
            <!--android:weightSum="2.0">-->

            <!--<Button-->
                <!--android:id="@+id/btnLogout"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1.0"-->
                <!--android:text="@string/logout"-->
                <!--android:theme="@style/ThemeOverlay.MyDarkButton" />-->

        <!--</LinearLayout>-->

    <!--</RelativeLayout>-->

</LinearLayout>
